New file and updates

--- a/homework2/Question1.html
+++ b/homework2/Question1.html
@@ -9,23 +9,23 @@
     <link href="https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <style>
         body {
-            background-color: #000000; /* Black background color */
-            color: #6add62; /* Light green text color */
-            font-family: 'Bitter', serif; /* Font style */
+            background-color: #000000; 
+            color: #6add62; 
+            font-family: 'Bitter', serif; 
             text-align: center;
             padding: 50px;
         }
 
         .logo {
-            font-size: 3em; /* Large font size for logo */
+            font-size: 3em; 
             margin-bottom: 20px;
         }
 
         .image {
-            width: 500px; /* Increased width for the image */
-            height: auto; /* Maintain aspect ratio */
-            border: 2px solid #333; /* Optional border for image */
-            border-radius: 10px; /* Rounded corners */
+            width: 500px; 
+            height: auto; 
+            border: 2px solid #333; 
+            border-radius: 10px; 
         }
     </style>
 </head>
