--- a/homework2/Fordham-cs-page.html
+++ b/homework2/Fordham-cs-page.html
@@ -86,8 +86,6 @@
         }
 
         .image-wrapper {
-            display: flex;
-            align-items: flex-start;
             margin-bottom: 20px;
         }
 
@@ -95,6 +93,7 @@
             margin-left: 20px;
             margin-bottom: 10px;
             width: 30%;
+            float: right; 
         }
 
         .image-wrapper p {
