--- a/homework2/bootstrap-navbar-2.html
+++ b/homework2/bootstrap-navbar-2.html
@@ -13,7 +13,7 @@
             background-color: darkblue; 
         }
         .navbar .nav-link, .navbar .navbar-brand {
-            color: white !important; 
+            color: white; 
         }
     </style>
 </head>
